...
          tabBarInactiveTintColor: colors.inactive,
        }}
      >
        <Tabs.Screen
          name="balance"
          options={{
            title: 'Balance',
            tabBarIcon: () => null,
            tabBarLabel: ({ focused }) => <TabLabel label="Balance" focused={focused} />,
          }}
        />
        <Tabs.Screen
          name="activity"
          options={{
            title: 'Activity',
            tabBarIcon: () => null,
            tabBarLabel: ({ focused }) => <TabLabel label="Activity" focused={focused} />,
          }}
        />
        <Tabs.Screen
          name="backup"
...
